2007-05-23  Marcus Meissner  <marcus@jet.franken.de>

	* main.c: Removed.
	* library.c: Reworked Bayer array decoding.
	   Use global bayer routines.

	* library.c, barbie.c: Largish clean up.