@@ -1,8 +1,7 @@
+EXTRA_DIST += barbie/Protocol.txt
 EXTRA_LTLIBRARIES += barbie.la
 
-barbie_la_SOURCES = \
-	barbie/barbie.c barbie/barbie.h \
-	barbie/library.c
+barbie_la_SOURCES = barbie/barbie.c
 barbie_la_LDFLAGS = $(camlib_ldflags)
 barbie_la_DEPENDENCIES = $(camlib_dependencies)
 barbie_la_LIBADD = $(camlib_libadd)
